--- a/app/sample.yaml
+++ b/app/sample.yaml
@@ -1,15 +1,16 @@
-# This file is provided so that the application can be compiled using Twister,
-# the Zephyr testing tool. In this file, multiple combinations can be specified,
-# so that you can easily test all of them locally or in CI.
 sample:
-  description: Example application
-  name: example-application
+  description: Hello World sample, the simplest Zephyr
+    application
+  name: hello world
 common:
-  build_only: true
+  tags: introduction
   integration_platforms:
-    - custom_plank
+    - native_posix
+  harness: console
+  harness_config:
+    type: one_line
+    regex:
+      - "Hello World! (.*)"
 tests:
-  app.default: {}
-  app.debug:
-    extra_overlay_confs:
-      - debug.conf
+  sample.basic.helloworld:
+    tags: introduction
